# lorai-workspace

./: CLAUDE.md  CLAUDE_PHASE2.md  README.md
.github/workflows/: ci.yml  pages.yml  publish-docker.yml  publish-sdk.yml
docs/: api.html  changelog.html  guide.html  index.html  integrations.html  sdk.html  style.css
lorai/: Dockerfile  README.md  requirements.txt
lorai-sdk/: LICENSE  README.md  pyproject.toml
lorai-sdk/examples/: quickstart.py
lorai-sdk/lorai/: __init__.py  client.py  docker.py
lorai-sdk/lorai/cli/: __init__.py
lorai-sdk/lorai_workspace/: __init__.py  client.py  docker.py
lorai-sdk/lorai_workspace/cli/: __init__.py
lorai-sdk/tests/: test_client.py
lorai/config/: openbox-menu.xml  openbox-rc.xml  supervisord.conf
lorai/scripts/: entrypoint.sh
lorai/src/agents/: agent_service.py
lorai/src/ai-shell/: lorai_shell.py  lorai_terminal.py
lorai/src/desktop/: lorai_panel.py
lorai/src/file-manager/: lorai_fs.py
lorai/src/gateway/: gateway.py
lorai/src/knowledge/: knowledge_service.py
